# nabu

./: .gitignore  .gitmodules  README.md  com.example.nabu.yml  com.mewmix.nabu.yml  fix_credits.sh  fix_scroll.sh  gemini.md  nabu_log.txt  patch  patchy  settings.gradle.kts  split_npz.py
.github/workflows/: publish-fdroid.yml
app/: build.gradle.kts  gemini.md  proguard-rules.pro
app-chat/: build.gradle.kts  consumer-rules.pro
app-chat/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app-tts/: build.gradle.kts  sherpa-onnx.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/kokoro/: voices_manifest.json
app/src/main/assets/kokoro/voices/: zm_yunjian.npy  (+3 more)
app/src/main/cpp/: CMakeLists.txt  espeakng_jni.c
app/src/main/res/drawable/: ic_credits_24.xml  ic_launcher_foreground.xml  ic_media_pause.xml  ic_media_play.xml  ic_media_stop.xml  ic_model_24.xml  ic_nabu_foreground.xml  ic_nabu_logo.xml
app/src/main/res/font/: quicksand.xml
app/src/main/res/layout/: nabu_voice_widget.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/raw/: model_allowlist.json
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: nabu_voice_widget_info.xml  shortcuts.xml
core-utils/: build.gradle.kts
core/settings/: TextModeState.kt
core/tts/: PhonemizerImpl.kt  PhonemizerImplTest.kt  TextMode.kt  adapters.kt
docs/: INTEGRATION_PLAN.md  NABU_UI_ACTION_PLANNER.md  sherpa-coexistence-log.md
engine/kokoro/: KokoroRunner.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+407 files in other folders)
